Do exercise 3 (in-progress)

--- a/BucksThreadApplication.vcxproj.filters
+++ b/BucksThreadApplication.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="BucksThreadApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ocean.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ocean.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
