--- a/BucksThreadApplication.vcxproj
+++ b/BucksThreadApplication.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BucksThreadApplication.cpp" />
+    <ClCompile Include="Ocean.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ocean.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
